; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_ht.c_ieee80211_parse_htinfo.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_ht.c_ieee80211_parse_htinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_node = type { i32 }
%struct.ieee80211_ie_htinfo = type { i32 }

@IEEE80211_ELEMID_VENDOR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ieee80211_parse_htinfo(%struct.ieee80211_node* %0, i64* %1) #0 {
  %3 = alloca %struct.ieee80211_node*, align 8
  %4 = alloca i64*, align 8
  store %struct.ieee80211_node* %0, %struct.ieee80211_node** %3, align 8
  store i64* %1, i64** %4, align 8
  %5 = load i64*, i64** %4, align 8
  %6 = getelementptr inbounds i64, i64* %5, i64 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @IEEE80211_ELEMID_VENDOR, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i64*, i64** %4, align 8
  %12 = getelementptr inbounds i64, i64* %11, i64 4
  store i64* %12, i64** %4, align 8
  br label %13

13:                                               ; preds = %10, %2
  %14 = load %struct.ieee80211_node*, %struct.ieee80211_node** %3, align 8
  %15 = load i64*, i64** %4, align 8
  %16 = bitcast i64* %15 to %struct.ieee80211_ie_htinfo*
  %17 = call i32 @htinfo_parse(%struct.ieee80211_node* %14, %struct.ieee80211_ie_htinfo* %16)
  ret void
}

declare dso_local i32 @htinfo_parse(%struct.ieee80211_node*, %struct.ieee80211_ie_htinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
